--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/components/painter"]
-	path = src/components/painter
-	url = git@github.com:Kujiale-Mobile/PainterCore.git
+[submodule "src/components/Painter"]
+	path = src/components/Painter
+	url = git@github.com:Kujiale-Mobile/Painter.git
