--- a/package.json
+++ b/package.json
@@ -1,67 +1,72 @@
 {
-  "name": "Taro-Painter-Demo",
-  "version": "1.0.0",
-  "private": true,
-  "description": "演示如何在taro框架中使用Painter",
-  "templateInfo": {
-    "name": "default",
-    "typescript": false,
-    "css": "none"
-  },
-  "scripts": {
-    "build:weapp": "taro build --type weapp",
-    "build:swan": "taro build --type swan",
-    "build:alipay": "taro build --type alipay",
-    "build:tt": "taro build --type tt",
-    "build:h5": "taro build --type h5",
-    "build:rn": "taro build --type rn",
-    "build:qq": "taro build --type qq",
-    "build:quickapp": "taro build --type quickapp",
-    "dev:weapp": "npm run build:weapp -- --watch",
-    "dev:swan": "npm run build:swan -- --watch",
-    "dev:alipay": "npm run build:alipay -- --watch",
-    "dev:tt": "npm run build:tt -- --watch",
-    "dev:h5": "npm run build:h5 -- --watch",
-    "dev:rn": "npm run build:rn -- --watch",
-    "dev:qq": "npm run build:qq -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch"
-  },
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "@tarojs/components": "1.3.31",
-    "@tarojs/router": "1.3.31",
-    "@tarojs/taro": "1.3.31",
-    "@tarojs/taro-alipay": "1.3.31",
-    "@tarojs/taro-h5": "1.3.31",
-    "@tarojs/taro-qq": "1.3.31",
-    "@tarojs/taro-quickapp": "1.3.31",
-    "@tarojs/taro-swan": "1.3.31",
-    "@tarojs/taro-tt": "1.3.31",
-    "@tarojs/taro-weapp": "1.3.31",
-    "nervjs": "^1.4.0",
-    "nerv-devtools": "^1.4.0"
-  },
-  "devDependencies": {
-    "@types/react": "^16.4.6",
-    "@types/webpack-env": "^1.13.6",
-    "@tarojs/plugin-babel": "1.3.31",
-    "@tarojs/plugin-csso": "1.3.31",
-    "@tarojs/plugin-uglifyjs": "1.3.31",
-    "@tarojs/webpack-runner": "1.3.31",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-jsx-stylesheet": "^0.6.5",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-eslint": "^8.2.3",
-    "eslint": "^5.16.0",
-    "eslint-config-taro": "1.3.31",
-    "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-import": "^2.12.0",
-    "stylelint": "9.3.0",
-    "stylelint-config-taro-rn": "1.3.31",
-    "stylelint-taro-rn": "1.3.31",
-    "eslint-plugin-taro": "1.3.31"
-  }
+	"name": "Taro-Painter-Demo",
+	"version": "1.0.0",
+	"private": true,
+	"description": "演示如何在taro框架中使用Painter",
+	"templateInfo": {
+		"name": "default",
+		"typescript": false,
+		"css": "none"
+	},
+	"scripts": {
+		"build:weapp": "taro build --type weapp",
+		"build:swan": "taro build --type swan",
+		"build:alipay": "taro build --type alipay",
+		"build:tt": "taro build --type tt",
+		"build:h5": "taro build --type h5",
+		"build:rn": "taro build --type rn",
+		"build:qq": "taro build --type qq",
+		"build:quickapp": "taro build --type quickapp",
+		"dev:weapp": "npm run build:weapp -- --watch",
+		"dev:swan": "npm run build:swan -- --watch",
+		"dev:alipay": "npm run build:alipay -- --watch",
+		"dev:tt": "npm run build:tt -- --watch",
+		"dev:h5": "npm run build:h5 -- --watch",
+		"dev:rn": "npm run build:rn -- --watch",
+		"dev:qq": "npm run build:qq -- --watch",
+		"dev:quickapp": "npm run build:quickapp -- --watch"
+	},
+	"author": "",
+	"license": "MIT",
+	"dependencies": {
+		"@tarojs/components": "2.2.8",
+		"@tarojs/mini-runner": "2.2.8",
+		"@tarojs/router": "2.2.8",
+		"@tarojs/taro": "2.2.8",
+		"@tarojs/taro-alipay": "2.2.8",
+		"@tarojs/taro-h5": "2.2.8",
+		"@tarojs/taro-qq": "2.2.8",
+		"@tarojs/taro-quickapp": "2.2.8",
+		"@tarojs/taro-swan": "2.2.8",
+		"@tarojs/taro-tt": "2.2.8",
+		"@tarojs/taro-weapp": "2.2.8",
+		"mina-painter": "^1.0.0",
+		"nerv-devtools": "^1.5.7",
+		"nervjs": "^1.5.7"
+	},
+	"devDependencies": {
+		"@tarojs/plugin-babel": "2.2.8",
+		"@tarojs/plugin-csso": "2.2.8",
+		"@tarojs/plugin-sass": "2.2.8",
+		"@tarojs/plugin-terser": "2.2.8",
+		"@tarojs/plugin-uglifyjs": "1.3.31",
+		"@tarojs/webpack-runner": "2.2.8",
+		"@types/react": "^16.4.6",
+		"@types/webpack-env": "^1.13.6",
+		"babel-eslint": "^8.2.3",
+		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-plugin-transform-decorators-legacy": "^1.3.4",
+		"babel-plugin-transform-jsx-stylesheet": "^0.6.5",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
+		"babel-plugin-transform-runtime": "^6.23.0",
+		"babel-preset-env": "^1.6.1",
+		"eslint": "^5.16.0",
+		"eslint-config-taro": "2.2.8",
+		"eslint-plugin-import": "^2.12.0",
+		"eslint-plugin-react": "^7.8.2",
+		"eslint-plugin-taro": "2.2.8",
+		"stylelint": "9.3.0",
+		"stylelint-config-taro-rn": "2.2.8",
+		"stylelint-taro-rn": "2.2.8"
+	}
 }
